# autopatch-community

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/refs/: grf_file.cpp  grf_file.hpp  patching.cpp  patching.hpp  thor_archive.cpp  thor_archive.hpp
cpp/src/builder/: builder.manifest  builder_window.cpp  builder_window.h  embedder.cpp  embedder.h  main.cpp  modern_ui.cpp  modern_ui.h  resources.rc  window.cpp  window.h
cpp/src/client/: client.manifest  embedded_browser.cpp  embedded_browser.h  main.cpp  mshtml_window.cpp  mshtml_window.h  resources.rc  skin.cpp  skin.h  ui.cpp  ui.h  video_background.cpp  video_background.h  video_player.cpp  video_player.h  webview2_window.cpp  webview2_window.h  window.cpp  window.h
cpp/src/core/: config.cpp  config.h  grf.cpp  grf.h  http.cpp  http.h  patcher.cpp  patcher.h  resources.cpp  resources.h  thor.cpp  thor.h  utils.cpp  utils.h
doc/: GRF_EDITOR_INTERNALS.md  GUIA_DE_USO.md  IMPLEMENTATION_PLAN.md
electron-builder/: DEVELOPMENT_PLAN.md  README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
electron-builder/native/: CMakeLists.txt
electron-builder/native/src/: main.cpp
electron-builder/src/main/: index.ts
electron-builder/src/renderer/src/: App.vue  main.ts
electron-builder/src/renderer/src/assets/: styles.css
electron-builder/src/renderer/src/components/common/: LanguageSelector.vue
electron-builder/src/renderer/src/components/editor/: CodeEditor.vue  DesignCanvas.vue  LayersPanel.vue  PropertyPanel.vue  SettingsPanel.vue
electron-builder/src/renderer/src/components/layout/: Sidebar.vue  StatusBar.vue  Toolbar.vue
electron-builder/src/renderer/src/i18n/: index.ts
electron-builder/src/renderer/src/i18n/locales/: en-US.ts  pt-BR.ts
electron-builder/src/renderer/src/stores/: project.ts  ui.ts
electron-builder/src/renderer/src/types/: index.ts
samples/: patcher.json  patchlist.txt  version.json  webview_test.html
